# historical-dev-inspect

./: .clippy.toml  Cargo.toml  README.md
crates/historical-dev-inspect/: Cargo.toml
crates/historical-dev-inspect/src/: checkpoint_store.rs  db.rs  execution.rs  init.rs  main.rs  rpc.rs  store.rs  transaction_input_loader.rs
ts/: .eslintrc.cjs  .gitignore  .prettierrc.json  eslint-config-base.json  package.json  pnpm-lock.yaml  tsconfig.json
ts/src/: client.ts  main.ts
