[package]
name = "historical-dev-inspect"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tokio.workspace = true

sui-config.workspace = true
sui-protocol-config.workspace = true
sui-execution.workspace = true
sui-types.workspace = true
sui-sdk-types.workspace = true
sui-graphql-client.workspace = true
sui-snapshot.workspace = true
prometheus = "0.13.3"
chrono = "0.4.39"
shared-crypto.workspace = true
sui-transaction-checks.workspace = true
sui-sdk.workspace = true
sui-core.workspace = true
bcs.workspace = true
rocksdb.workspace = true
thiserror.workspace = true
sui-storage.workspace = true
futures.workspace = true
clap.workspace = true
indicatif = "0.17.11"
object_store.workspace = true
byteorder = "1.5.0"
fastcrypto = "0.1.9"
sui-indexer-alt-framework.workspace = true
tracing.workspace = true
telemetry-subscribers.workspace = true
move-core-types.workspace = true
serde.workspace = true
axum = "0.7.9"
sui-json-rpc-types.workspace = true
sui-json-rpc.workspace = true
jsonrpsee-types.workspace = true
sui-data-ingestion-core.workspace = true
backoff.workspace = true
